--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -493,7 +493,7 @@
             update: function(event, ui) {
                 jQuery('.Sorting form.sorting-row').each(function(index, elm) {
                     // Update order of all elements
-                    if(index != elm.order.value) {
+                    if(index !== elm.order.value) {
                         elm.order.value = index
                         // Submit changed order
                         var data = {}
