Label in progress bar for URL fetches
Visually more distinctive

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -67,6 +67,7 @@
             glitterTranslate.fetch = "$T('Glitter-fetch')";
             glitterTranslate.checking = "$T('post-Checking')";
             glitterTranslate.misingArt = "$T('missingArt')";
+            glitterTranslate.fetchingURL = "$T('Glitter-addFromURL')"
             glitterTranslate.chooseFile = "$T('Glitter-chooseFile')";
             glitterTranslate.orphanedJobsMsg = "$T('explain-orphans')";
             glitterTranslate.useCache = "$T('explain-cache_limitstr').replace("64M", "256M").replace("128M", "512M")";
