Add smarter duplicate detection
Restore pre-queue

--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -202,7 +202,7 @@
                 <div class="field-pair">
                     <label class="config" for="nscript_parameters">$T('opt-nscript_parameters')</label>
                     <input type="text" name="nscript_parameters" id="nscript_parameters" value="$nscript_parameters" />
-                    <span class="desc">$T('Optional') - $T('explain-nscript_parameters')</span>
+                    <span class="desc">$T('Optional') - $T('readwiki')</span>
                 </div>
                 $show_notify_checkboxes('nscript')
                 <div class="field-pair no-field-pair-bg">
