Give RSS feed it's own history-stage

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -97,6 +97,7 @@
             glitterTranslate.status['Unpack'] = "$T('stage-unpack')";
             glitterTranslate.status['Deobfuscate'] = "$T('stage-deobfuscate')";
             glitterTranslate.status['Script'] = "$T('stage-script')";
+            glitterTranslate.status['RSS'] = "$T('stage-rss')";
             glitterTranslate.status['Source'] = "$T('stage-source')";
             glitterTranslate.status['Servers'] = "$T('stage-servers')";
             glitterTranslate.status['INFO'] = "$T('log-info')".replace('+', '').toUpperCase();
