Remove IRC specific texts

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -88,8 +88,8 @@
                     <td><a href="https://github.com/sabnzbd/sabnzbd" target="_blank">https://github.com/sabnzbd/sabnzbd</a></td>
                 </tr>
                 <tr>
-                    <th scope="row">$T('menu-irc') </th>
-                    <td><a href="irc://irc.synirc.net/#sabnzbd"><i>#sabnzbd</i> on <i>irc.synirc.net</i></a> $T('or') (<a href="http://sabnzbd.org/live-chat/" target="_blank">webchat</a>)</td>
+                    <th scope="row">$T('menu-live-chat') </th>
+                    <td><a href="https://sabnzbd.org/live-chat/" target="_blank">https://sabnzbd.org/live-chat/</a></td>
                 </tr>
                 <tr>
                     <th scope="row">$T('menu-issues') </th>
