--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -712,7 +712,7 @@
                             <td><a href="https://github.com/sabnzbd/sabnzbd" target="_blank">https://github.com/sabnzbd/sabnzbd/</a></td>
                         </tr>
                         <tr>
-                            <td><strong>$T('menu-irc'):</strong></td>
+                            <td><strong>$T('menu-live-chat'):</strong></td>
                             <td><a href="https://sabnzbd.org/live-chat" target="_blank">https://sabnzbd.org/live-chat</a></td>
                         </tr>
                     </tbody>
