Explain that Retry disabled aborting due to missing articles
Closes #2765

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -665,6 +665,9 @@
                             </div>
                         </div>
                     </fieldset>
+                    <fieldset>
+                        $T('Glitter-retryNoChecks')
+                    </fieldset>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-default"><span class="glyphicon glyphicon-repeat"></span> $T('button-retry')</button>
