Make UI theme selection a non-advanced setting

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -35,7 +35,7 @@
                         <span class="desc">$T('explain-enable_https')</span>
                         <span class="desc"><span class="label label-warning">$T('warning').upper()</span> $T('explain-enable_https_warning')</span>
                     </div>
-                    <div class="field-pair advanced-settings">
+                    <div class="field-pair">
                         <label class="config" for="web_dir">$T('opt-web_dir')</label>
                         <select name="web_dir" id="web_dir">
                         <!--#for $webline in $web_list#-->
