Correct focus style of Config Night navbar

--- a/interfaces/Config/templates/staticcfg/css/Night.css
+++ b/interfaces/Config/templates/staticcfg/css/Night.css
@@ -47,6 +47,7 @@ textarea,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>li>a.active,
 .navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus,
 .navbar-logo:hover,
 .quoteBlock,
 .selected,
