Add IRC and Discord label

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -29,9 +29,7 @@
                 </tr>
                 <tr>
                     <th scope="row">OpenSSL:</th>
-                    <td>
-                        $ssl_version
-                    </td>
+                    <td>$ssl_version</td>
                 </tr>
                 <!--#if not $windows and not $macos#-->
                 <tr>
@@ -81,7 +79,7 @@
                 </tr>
                 <tr>
                     <th scope="row">$T('menu-live-chat') </th>
-                    <td><a href="https://sabnzbd.org/live-chat/" target="_blank">https://sabnzbd.org/live-chat/</a></td>
+                    <td><a href="https://sabnzbd.org/live-chat/" target="_blank">https://sabnzbd.org/live-chat/</a> (IRC &amp; Discord)</td>
                 </tr>
                 <tr>
                     <th scope="row">$T('menu-issues') </th>
