--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -140,7 +140,7 @@
             </label>
         </div>
 
-        <a href="#" class="hover-button" data-bind="visible: history.isMultiEditing(), click: history.doMultiDelete">
+        <a href="#" class="hover-button" title="$T('nzo-delete')" data-bind="visible: history.isMultiEditing(), click: history.doMultiDelete">
             <span class="glyphicon glyphicon-trash"></span>
         </a>
         <a href="#modal-purge-history" class="hover-button" title="$T('purgeHist')" data-bind="visible: !history.isMultiEditing()" data-toggle="modal" data-tooltip="true" data-placement="left">
