--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -174,7 +174,7 @@
             <label for="multiedit-checkall-queue">
                 <input type="checkbox" name="multieditCheckAll" id="multiedit-checkall-queue" title="$T('Glitter-checkAll')" data-bind="click: queue.checkAllJobs" data-tooltip="true" data-placement="top" />
             </label>
-            <a href="#" class="hover-button" data-bind="click: queue.doMultiDelete">
+            <a href="#" class="hover-button" title="$T('removeNZB-Files')" data-bind="click: queue.doMultiDelete">
                 <span class="glyphicon glyphicon-trash"></span>
             </a>
         </div>
