Add toggle for Archive to History

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -272,6 +272,10 @@ button:focus {
     outline: initial;
 }
 
+.archive-icon {
+    fill: #EBEBEB;
+}
+
 /* Placeholders - Will not work if grouped! */
 ::-webkit-input-placeholder {
    color: #EBEBEB !important;
