Add link to Apprise documentation section

--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -178,7 +178,7 @@
     <!--#end if#-->
     <div class="section" id="apprise">
         <div class="col2">
-            <h3>$T('section-Apprise')</h3>
+            <h3>$T('section-Apprise') <a href="$help_uri#apprise" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <table>
                 <tr>
                     <td><input type="checkbox" name="apprise_enable" id="apprise_enable" value="1" <!--#if int($apprise_enable) > 0 then 'checked="checked"' else ""#--> /></td>
